2003-07-21  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* ftpfs.c (load_no_proxy_list): Fix infinitive loop if ferror().
	(initconn): Reset variables if setup_passive() fails.
	(open_data_connection): Set my_errno to errno before close()
	syscall.
	(dir_load): Optimize cd_first calculation.

2003-06-24  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/lslR.in: Portability fixes.

2003-06-21  Jindrich Makovicka  <makovick@kmlinux.fjfi.cvut.cz>

	* ftpfs.c (command): Fix misuse of the status variable.  Don't
	cache the value of SUP.sock before reconnect.

2003-06-05  Pavel Roskin  <proski@gnu.org>

	* vfs.c: Rename mc_return_cwd() to _vfs_get_cwd().  Move
	related functions closer to each other, add comments.

	* ftpfs.c (ftpfs_done): New function.  Free ftpfs_proxy_host and
	ftpfs_anonymous_passwd.

2003-05-30  Pavel Roskin  <proski@gnu.org>

	* extfs/trpm: Fix compatibility with the secure temporary
	filenames used by extfs.  Filter rpm messages from the listing.

2003-05-08  Pavel Roskin  <proski@gnu.org>

	* fish.c (file_store): Use block size 1.  It's slower, but much
	safer.  GNU dd is not persistent enough when reading data.

	* extfs/rpm: If rpm doesn't support --info as in Red Hat 9,
	ignore it and don't show HEADER in the listing.

2003-04-29  Michael Shigorin  <mike@osdn.org.ua>

	* extfs/iso9660.in: Determine presence of Rock Ridge and Joliet
	extensions by running "isoinfo -R".  Use current charset for
	Joliet extensions.

2003-04-29  Pavel Roskin  <proski@gnu.org>

	* extfs/iso9660.in: New filesystem for ISO-9660 images.
	From Michael Shigorin <mike@altlinux.org>
	* extfs/extfs.ini: Add iso9660.
	* extfs/Makefile.am: Add extfs/iso9660.in.

2003-04-03  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* smbfs.c (open_readwrite): New function to replace open_read()
	and open_write().  Use cli_close() if cli_qfileinfo() or
	cli_getattrE() fail.

	(smbfs_open): Use open_readwrite(). Free remote_handle if
	open_readwrite() fails.

2003-03-24  Adam Byrtek  <alpha@debian.org>
